--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
-        "src": "commands/build.sh",
+        "src": "build.sh",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "dist"
