--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "3.2"
+dj-database-url = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 
