--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-asgiref==3.5.1;
-django==3.2;
-pytz==2022.1;
-sqlparse==0.4.2;
+asgiref==3.5.1; 
+dj-database-url==0.5.0;
+django==3.2; 
+pytz==2022.1; 
+sqlparse==0.4.2; 
