--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
 python = "^3.9"
 Django = "3.2"
 dj-database-url = "^0.5.0"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 
