--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
     "version": 2,
     "builds": [
       {
-        "src": "web/backend/wsgi.py",
+        "src": "./web/backend/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
-        "src": "build.sh",
+        "src": "./build.sh",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "dist"
@@ -21,7 +21,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "web/backend/wsgi.py"
+        "dest": "./web/backend/wsgi.py"
       }
     ]
   }
