--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.1; 
 dj-database-url==0.5.0;
 django==3.2; 
+gunicorn==20.1.0; 
 psycopg2-binary==2.9.3; 
+python-dotenv==0.20.0; 
 pytz==2022.1; 
 sqlparse==0.4.2; 
