--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.9.3"
 python-dotenv = "^0.20.0"
 gunicorn = "^20.1.0"
+whitenoise = "^6.1.0"
 
 [tool.poetry.dev-dependencies]
 
