Updated: static root

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
         "src": "build.sh",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "staticfiles_build"
+          "distDir": "dist"
         }
       }
     ],
