--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ python = "^3.9"
 Django = "3.2"
 dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.9.3"
-python-dotenv = "^0.20.0"
 gunicorn = "^20.1.0"
 whitenoise = "^6.1.0"
+django-dotenv = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 
